# duck-examples

./: README.md  duck-examples.code-workspace
01_vss/: main.py  pyproject.toml
02_fts/: README.md  main.py  pyproject.toml
03_rerank/: main.py  pyproject.toml
