[project]
name = "03-rerank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "duckdb>=1.2.2",
    "lindera-py>=0.41.0",
    "sentence-transformers>=4.1.0",
]
